03-kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-default-backend
  namespace: default-backend-ns
spec:
  selector:
    app: default-backend-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
