03-kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-backend-ingress
  namespace: default-backend-ns
  annotations:
    ingressClassName: "nginx"
spec:
  rules:
    - host: simple.web.app # Смотреть "README.md"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-default-backend
                port:
                  number: 80
